; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_da9062-core.c_da9062_i2c_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_da9062-core.c_da9062_i2c_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.da9062 = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @da9062_i2c_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @da9062_i2c_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.da9062*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.da9062* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.da9062* %5, %struct.da9062** %3, align 8
  %6 = load %struct.da9062*, %struct.da9062** %3, align 8
  %7 = getelementptr inbounds %struct.da9062, %struct.da9062* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @mfd_remove_devices(i32 %8)
  %10 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %11 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.da9062*, %struct.da9062** %3, align 8
  %14 = getelementptr inbounds %struct.da9062, %struct.da9062* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @regmap_del_irq_chip(i32 %12, i32 %15)
  ret i32 0
}

declare dso_local %struct.da9062* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @mfd_remove_devices(i32) #1

declare dso_local i32 @regmap_del_irq_chip(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
